--- a/HTML/detailMakanan.html
+++ b/HTML/detailMakanan.html
@@ -56,7 +56,7 @@
                 
                 <div class="buttons">
                     <button class="chat bTextOne f600" style="background-color: white; color: #4AAD54;">Chat</button>
-                    <button class="ambil bTextOne f600" style="background-color: #4AAD54; color: white"><a href="/HTML/checkout.html" style="text-decoration: none;">Ambil</a></button>
+                    <button class="ambil bTextOne f600" style="background-color: #4AAD54;"><a href="/HTML/checkout.html" style="text-decoration: none; color: white">Ambil</a></button>
                 </div>
             </div>
         </div>
