--- a/HTML/daftar.html
+++ b/HTML/daftar.html
@@ -53,21 +53,16 @@
                     </div>
                 </div>
             </form>
-            <input type="submit" value="Daftar" class="submitBtn bTextOne f600" onclick="beranda()">
+            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html">Daftar</a></button>
             <div class="lines">
                 <hr/>
                 <p style="margin: 0;">Atau</p>
                 <hr/>
             </div>
-            <button class="submitBtn googleBtn bTextTwo f500" onclick="beranda()">
+            <button class="submitBtn googleBtn">
                 <span><img src="/Images/icon/devicon_google.svg"></span>
-                Daftar dengan Google
+                <a class="bTextTwo f500" href="./beranda.html">Daftar dengan Google</a>
             </button>
-            <script>
-                function beranda(){
-                    location.replace("http://127.0.0.1:3000/HTML/beranda.html")
-                }
-            </script>
             <div class="masuk">
                 <p class="bTextTwo f400">Sudah punya akun?</p>
                 <a href="./masuk.html" class="bTextTwo f500">Masuk</a>
