--- a/HTML/daftar.html
+++ b/HTML/daftar.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </form>
-            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html">Daftar</a></button>
+            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html" style="color: white;">Daftar</a></button>
             <div class="lines">
                 <hr/>
                 <p style="margin: 0;">Atau</p>
