--- a/HTML/detailMakanan.html
+++ b/HTML/detailMakanan.html
@@ -14,7 +14,7 @@
     <body>
         <div class="header">
             <div class="left">
-                <button class="backBtn"><img src="/Images/icon/arrow up.svg"></button>
+                <button class="backBtn" onclick="history.back()"><img src="/Images/icon/arrow up.svg"></button>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
