--- a/HTML/masuk.html
+++ b/HTML/masuk.html
@@ -35,7 +35,7 @@
                 </div>
                 <a class="bTextTwo f500">Lupa kata sandi?</a>
             </form>
-            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html">Masuk</a></button>
+            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html" style="color: white;">Masuk</a></button>
             <div class="lines">
                 <hr/>
                 <p style="margin: 0;">Atau</p>
