--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -12,18 +12,18 @@
         <link rel="stylesheet" href="/CSS/checkout.css">
     <body>
         <div class="header">
-            <button class="backBtn"><img src="/Images/icon/arrow up.svg"></button>
+            <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
             <p class="bTextOne f600">Checkout</p>
         </div>
         <div class="desktop-header">
             <div class="left">
-                <button class="backBtn"><img src="/Images/icon/arrow up.svg"></button>
+                <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
-                <button class="notifBtn"><img src="/Images/icon/notif.svg"></button>
-                <button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button>
-                <button class="historyBtn"><img src="/Images/icon/material-symbols_history-rounded.svg"></button>
+                <a><button class="notifBtn"><img src="/Images/icon/notif.svg"></button></a>
+                <a><button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button></a>
+                <a><button class="historyBtn"><img src="/Images/icon/material-symbols_history-rounded.svg"></button></a>
             </div>        
         </div>
 
