--- a/HTML/tambahkanProduk.html
+++ b/HTML/tambahkanProduk.html
@@ -39,7 +39,7 @@
                 <textarea id="description" cols="40" rows="6" class="bTextTwo f400 desc"></textarea><br/>
 
                 <label for="kategori" class="bTextOne f500">Kategori</label><br/>
-                <input type="radio" name="kategori" id="donasi" value="Donasi">
+                <input type="radio" name="kategori" id="donasi" value="Donasi" style="font-size: 0.9em;">
                 <label for="donasi" class="b500">Donasi</label><br/>
                 <input type="radio" name="kategori" id="jual" value="Jual">
                 <label for="jual" class="b500">Jual</label><br/>
