--- a/HTML/beranda.html
+++ b/HTML/beranda.html
@@ -5,8 +5,118 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title></title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+        
+        <link rel="stylesheet" href="/CSS/daftarStyle.css">
+        <link rel="stylesheet" href="/CSS/beranda.css"> 
     </head>
     <body>
+        <div class="header">
+            <div class="left">
+                <img src="/Images/Ellipse 86.png" class="profileImg">
+                <p class="bTextOne f600">Rizka</p>
+            </div>
+            <div class="right">
+                <a><button class="notifBtn"><img src="/Images/icon/notif.svg"></button></a>
+                <a><button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button></a>
+                <a><button class="historyBtn"><img src="/Images/icon/material-symbols_history-rounded.svg"></button></a>
+            </div>        
+        </div>
+
+        <div id="carouselBeranda" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselBeranda" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselBeranda" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselBeranda" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-wrapper">
+                    <div class="item-left">
+                        <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextTwo f500" style="margin-bottom: 1em;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/Group 16222.png">
+                    </div>
+                </div>
+                <div class="desktop-carousel-wrapper">
+                    <div class="item-left">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+                    <div class="item-middle">
+                        <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item ">
+               <div class="carousel-wrapper">
+                    <div class="item-left">
+                        <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextTwo f500" style="margin-bottom: 1em;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/Group 16222.png">
+                    </div>
+                </div>
+               <div class="desktop-carousel-wrapper">
+                    <div class="item-left">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+                    <div class="item-middle">
+                        <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+               </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-wrapper">
+                    <div class="item-left">
+                        <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextTwo f500" style="margin-bottom: 1em;" >Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/Group 16222.png">
+                    </div>
+                </div>
+                <div class="desktop-carousel-wrapper">
+                    <div class="item-left">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+                    <div class="item-middle">
+                        <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
+                        <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
+                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                    </div>
+                    <div class="item-right">
+                        <img src="/Images/desktop-beranda.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselBeranda" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselBeranda" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+        </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     </body>
