--- a/HTML/tambahkanProduk.html
+++ b/HTML/tambahkanProduk.html
@@ -29,8 +29,9 @@
         </div>
 
         <div class="container">
-            <h1 class="bTextOne f600">Unggah Makanan/Minumanmu!</h1>
-            <p class="bTextTwo f500" style="color: #888C9E; margin: 0.75em 0 0.85em 0;">Beri tahu kami tentang produkmu.</p>
+            <div class="col">
+            <h1 class="bTextOne f600 title">Unggah Makanan/Minumanmu!</h1>
+            <p class="bTextTwo f500 title" style="color: #888C9E; margin: 0.75em 0 0.85em 0;">Beri tahu kami tentang produkmu.</p>
             <form action="./beranda.html">
                 <label for="name" class="bTextOne f500">Nama Produk</label><br/>
                 <input type="text" id="name" class="bTextTwo f400"><br/>
@@ -39,31 +40,39 @@
                 <textarea id="description" cols="40" rows="6" class="bTextTwo f400 desc"></textarea><br/>
 
                 <label for="kategori" class="bTextOne f500">Kategori</label><br/>
-                <input type="radio" name="kategori" id="donasi" value="Donasi" style="font-size: 0.9em;">
-                <label for="donasi" class="b500">Donasi</label><br/>
-                <input type="radio" name="kategori" id="jual" value="Jual">
-                <label for="jual" class="b500">Jual</label><br/>
-
-                <label for="price" class="bTextOne f500">Harga</label><br/>
-                <input type="text" id="price" class="bTextTwo f400"><br/>
-
-                <label for="exp" class="bTextOne f500">Waktu Kedaluarsa</label><br/>
-                <input type="text" id="exp" class="bTextTwo f400"><br/>
-
-                <label for="location" class="bTextOne f500">Lokasi</label><br/>
-                <input type="text" id="location" class="bTextTwo f400"><br/>
-
-                <label for="price" class="bTextOne f500">Harga</label><br/>
-                <input type="text" id="description" class="bTextTwo f400"><br/>
+                <div class="radio-div">
+                    <div class="row">
+                        <input type="radio" name="kategori" id="donasi" value="Donasi" style="font-size: 0.9em;">
+                        <label for="donasi" class="b500">Donasi</label>
+                    </div>
+                    <div class="row">    
+                        <input type="radio" name="kategori" id="jual" value="Jual">
+                        <label for="jual" class="b500">Jual</label>
+                    </div>
+                </div>
+                <div class="product-div">
+                    <div class="row">
+                        <label for="price" class="bTextOne f500">Harga</label><br/>
+                         <input type="text" id="price" class="bTextTwo f400"><br/>
+                    </div>
+                    <div class="row">
+                        <label for="exp" class="bTextOne f500">Waktu Kedaluarsa</label><br/>
+                        <input type="text" id="exp" class="bTextTwo f400"><br/>
+                    </div>
+                    <div class="row">
+                        <label for="location" class="bTextOne f500">Lokasi</label><br/>
+                        <input type="text" id="location" class="bTextTwo f400"><br/>
+                    </div>
+                </div>
 
                 <label for="picture" class="bTextOne f500">Gambar Produk</label>
                 <div class="pic-container">
                     <img src="/Images/unggah.png">
                     <p class="bTextTwo f600">Format yang didukung: JPEG, PNG</p>
-                </div>     
-                
-                <input type="submit" value="Unggah Produk">
+                </div>                     
+                <input type="submit" value="Unggah Produk" class="bTextOne f600">
             </form>
+            </div>
         </div>    
     </body>
 </html>
