--- a/HTML/checkout.html
+++ b/HTML/checkout.html
@@ -12,12 +12,12 @@
         <link rel="stylesheet" href="/CSS/checkout.css">
     <body>
         <div class="header">
-            <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
+            <button class="backBtn" onclick="history.back()"><img src="/Images/icon/arrow up.svg"></button>
             <p class="bTextOne f600">Checkout</p>
         </div>
         <div class="desktop-header">
             <div class="left">
-                <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
+                <button class="backBtn" onclick="history.back()"><img src="/Images/icon/arrow up.svg"></button>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
