--- a/HTML/beranda.html
+++ b/HTML/beranda.html
@@ -20,8 +20,8 @@
             </div>
             <div class="right">
                 <a><button class="notifBtn"><img src="/Images/icon/notif.svg"></button></a>
-                <a><button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button></a>
-                <a><button class="historyBtn"><img src="/Images/icon/material-symbols_history-rounded.svg"></button></a>
+                <a href="./chat.html"><button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button></a>
+                <a href="./riwayat.html"><button class="historyBtn"><img src="/Images/icon/material-symbols_history-rounded.svg"></button></a>
             </div>        
         </div>
 
@@ -37,7 +37,7 @@
                     <div class="item-left">
                         <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextTwo f500" style="margin-bottom: 1em;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href="./daftarMakanan.html"><button class="bTextTwo f600">Beli Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/Group 16222.png">
@@ -50,7 +50,7 @@
                     <div class="item-middle">
                         <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href="./daftarMakanan.html"><button class="bTextTwo f600">Beli Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/desktop-beranda.svg">
@@ -58,24 +58,24 @@
                 </div>
             </div>
             <div class="carousel-item ">
-               <div class="carousel-wrapper">
+               <div class="carousel-wrapper" style="background-color: #FFB68B;">
                     <div class="item-left">
                         <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextTwo f500" style="margin-bottom: 1em;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href="./tambahkanProduk.html"><button class="bTextTwo f600" style="color: #FFB68B;">Jual Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/Group 16222.png">
                     </div>
                 </div>
-               <div class="desktop-carousel-wrapper">
+               <div class="desktop-carousel-wrapper" style="background-color: #FFB68B;">
                     <div class="item-left">
                         <img src="/Images/desktop-beranda.svg">
                     </div>
                     <div class="item-middle">
                         <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href="./tambahkanProduk.html"><button class="bTextTwo f600" style="color: #FFB68B;">Jual Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/desktop-beranda.svg">
@@ -83,24 +83,24 @@
                </div>
             </div>
             <div class="carousel-item">
-                <div class="carousel-wrapper">
+                <div class="carousel-wrapper" style="background-color: #8EADFF;">
                     <div class="item-left">
                         <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextTwo f500" style="margin-bottom: 1em;" >Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href=""><button class="bTextTwo f600" style="padding: 0.5em 1.3em; color: #8EADFF;">Donasikan Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/Group 16222.png">
                     </div>
                 </div>
-                <div class="desktop-carousel-wrapper">
+                <div class="desktop-carousel-wrapper" style="background-color: #8EADFF!important;">
                     <div class="item-left">
                         <img src="/Images/desktop-beranda.svg">
                     </div>
                     <div class="item-middle">
                         <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600">Beli Sekarang</button></a>
+                        <a href=""><button class="bTextTwo f600" style="color: #8EADFF;">Donasi Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/desktop-beranda.svg">
@@ -131,14 +131,14 @@
                 <img src="/Images/icon/voucher.svg">
                 <div class="description">
                     <p class="bTextTwo f600">Voucher</p>
-                    <p class="bTextTwo f400">Tukar</p>
+                    <a href="./poin.html" style="text-decoration: none;"><p class="bTextTwo f400" style="color: #DD6202; text-decoration: none;">Tukar</p></a>
                 </div>
             </div>
         </div>
 
        <div class="input-group">
             <div class="input-group-prepend">
-                    <span class="input-group-text" id="search">&#xF52A;</span>
+                    <span class="input-group-text" id="search"><img src="../Images/icon/search.svg"></span>
             </div>
             <input type="email" class="form-control" id="search">
        </div>
