--- a/HTML/daftar.html
+++ b/HTML/daftar.html
@@ -53,16 +53,17 @@
                     </div>
                 </div>
             </form>
-            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html" style="color: white;">Daftar</a></button>
+            <a href="./beranda.html"><button class="submitBtn bTextOne f600"><p  class="bTextOne f600" style="color: white;">Daftar</p></button></a>
             <div class="lines">
                 <hr/>
                 <p style="margin: 0;">Atau</p>
                 <hr/>
             </div>
-            <button class="submitBtn googleBtn">
+            <a href="./beranda.html"><button class="submitBtn googleBtn">
                 <span><img src="/Images/icon/devicon_google.svg"></span>
-                <a class="bTextTwo f500" href="./beranda.html">Daftar dengan Google</a>
-            </button>
+                <p class="bTextTwo f500">Daftar dengan Google</p>
+            </button></a>
+            
             <div class="masuk">
                 <p class="bTextTwo f400">Sudah punya akun?</p>
                 <a href="./masuk.html" class="bTextTwo f500">Masuk</a>
