--- a/HTML/masuk.html
+++ b/HTML/masuk.html
@@ -35,16 +35,19 @@
                 </div>
                 <a class="bTextTwo f500">Lupa kata sandi?</a>
             </form>
-            <button class="submitBtn bTextOne f600"><a  class="bTextOne f600" href="./beranda.html" style="color: white;">Masuk</a></button>
+            <a href="./beranda.html"><button class="submitBtn bTextOne f600"><P  class="bTextOne f600" style="color: white;">Masuk</P></button></a>
             <div class="lines">
                 <hr/>
                 <p style="margin: 0;">Atau</p>
                 <hr/>
             </div>
+            <a href="./beranda.html">
             <button class="submitBtn googleBtn">
                 <span><img src="/Images/icon/devicon_google.svg"></span>
-                <a class="bTextTwo f500" href="./beranda.html">Masuk dengan Google</a>
+                <p class="bTextTwo f500">Masuk dengan Google</p>
             </button>
+            </a>
+            
             <div class="masuk">
                 <p class="bTextTwo f400">Belum punya akun?</p>
                 <a href="./daftar.html" class="bTextTwo f500">Daftar</a>
