--- a/HTML/profil.html
+++ b/HTML/profil.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Saya</title>
-  <link rel="stylesheet" href="../CSS/daftarStyle.css" />
-  <link rel="stylesheet" href="../CSS/profil.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profil Pengguna</title>
+    <link rel="stylesheet" href="../CSS/daftarStyle.css">
+    <link rel="stylesheet" href="../CSS/profil.css">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-
-  <!-- Header -->
         <div class="desktop-header">
             <div class="left">
-                <a href="./beranda.html"><button class="backBtn"><img src="../Images/icon/arrow up.svg"></button></a>
+                <a href="../HTML/beranda.html"><button class="backBtn"><img src="../Images/icon/arrow up.svg"></button></a>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
@@ -24,34 +23,52 @@
             </div>        
         </div>
 
-  <!-- Profil Container -->
-  <div class="profil-container">
-    <div class="avatar-wrapper">
-      <img src="../Images/user.jpg" alt="Foto Profil" class="avatar">
-    </div>
-    <p class="nama">Budi Santoso</p>
-    <p class="email">budi.santoso@mail.com</p>
+    <div class="profile-page-container">
+        <div class="profile-header-green-bg"></div>
 
-    <div class="info-box">
-      <p class="label">Nama</p>
-      <p class="value">Budi Santoso</p>
-    </div>
-    <div class="info-box">
-      <p class="label">Email</p>
-      <p class="value">budi.santoso@mail.com</p>
-    </div>
-    <div class="info-box">
-      <p class="label">Nomor HP</p>
-      <p class="value">+62 812-3456-7890</p>
-    </div>
+        <main class="profile-main-content">
+            <div class="profile-picture-section">
+                <img src="../Images/Ellipse 86.png" alt="Foto Profil Rizka" class="profile-avatar">
+            </div>
+            <h1 class="profile-name">Rizka</h1>
 
-    <div class="action-btns">
-      <button class="gray-btn">Ubah Kata Sandi</button>
-      <button class="red-btn">Keluar</button>
+            <section class="profile-details-group">
+                <h2 class="section-title">Detail Profil</h2>
+                <div class="info-item">
+                    <span class="material-icons-outlined info-icon">email</span>
+                    <span class="info-label">Email</span>
+                    <span class="info-value">rizka@gmail.com</span>
+                </div>
+                <div class="info-item">
+                    <span class="material-icons-outlined info-icon">phone_iphone</span>
+                    <span class="info-label">No Telp</span>
+                    <span class="info-value">082247283745</span>
+                </div>
+            </section>
+
+            <section class="profile-details-group">
+                <h2 class="section-title">Preferences</h2>
+                <a href="#" class="preference-item">
+                    <span class="material-icons-outlined pref-icon">notifications_none</span>
+                    <span class="pref-label">Atur Notifikasi</span>
+                    <span class="material-icons-outlined pref-arrow">chevron_right</span>
+                </a>
+                <a href="#" class="preference-item">
+                    <span class="material-icons pref-icon">more_horiz</span>
+                    <span class="pref-label">Ubah Kata Sandi</span>
+                    <span class="material-icons-outlined pref-arrow">chevron_right</span>
+                </a>
+                <a href="#" class="preference-item logout-item">
+                    <span class="material-icons-outlined pref-icon icon-logout">logout</span>
+                    <span class="pref-label">Keluar</span>
+                    <span class="material-icons-outlined pref-arrow">chevron_right</span>
+                </a>
+            </section>
+        </main>
+
+        <footer class="profile-footer-action">
+            <button class="upload-product-button">Unggah Produk</button>
+        </footer>
     </div>
-
-    <button class="green-btn">Unggah Produk</button>
-  </div>
-
 </body>
 </html>
