--- a/HTML/beranda.html
+++ b/HTML/beranda.html
@@ -14,10 +14,10 @@
     </head>
     <body>
         <div class="header">
-            <div class="left">
+            <a href="/HTML/profil.html" style="text-decoration: none; color: black;"><div class="left">
                 <img src="/Images/Ellipse 86.png" class="profileImg">
                 <p class="bTextOne f600">Rizka</p>
-            </div>
+            </div></a>
             <div class="right">
                 <a><button class="notifBtn"><img src="/Images/icon/notif.svg"></button></a>
                 <a href="./chat.html"><button class="chatBtn"><img src="/Images/icon/ant-design_message-outlined.svg"></button></a>
