--- a/HTML/detailMakanan.html
+++ b/HTML/detailMakanan.html
@@ -55,7 +55,7 @@
                 </div>
                 
                 <div class="buttons">
-                    <button class="chat bTextOne f600" style="background-color: white; color: #4AAD54;">Chat</button>
+                    <button class="chat bTextOne f600" style="background-color: white;"><a href="chat.html" style="text-decoration: none;  color: #4AAD54;">Chat</a></button>
                     <button class="ambil bTextOne f600" style="background-color: #4AAD54;"><a href="/HTML/checkout.html" style="text-decoration: none; color: white">Ambil</a></button>
                 </div>
             </div>
