fix riwayat, profil

--- a/HTML/profil.html
+++ b/HTML/profil.html
@@ -17,9 +17,9 @@
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
-                <button class="notifBtn"><img src="../Images/icon/notif.svg"></button>
-                <button class="chatBtn"><img src="../Images/icon/ant-design_message-outlined.svg"></button>
-                <button class="historyBtn"><img src="../Images/icon/material-symbols_history-rounded.svg"></button>
+                <a href="#"><button class="notifBtn"><img src="../Images/icon/notif.svg"></button></a>
+                <a href="../HTML/chat.html"><button class="chatBtn"><img src="../Images/icon/ant-design_message-outlined.svg"></button></a>
+                <a href="../HTML/riwayat.html"><button class="historyBtn"><img src="../Images/icon/material-symbols_history-rounded.svg"></button></a>
             </div>        
         </div>
 
@@ -58,7 +58,7 @@
                     <span class="pref-label">Ubah Kata Sandi</span>
                     <span class="material-icons-outlined pref-arrow">chevron_right</span>
                 </a>
-                <a href="#" class="preference-item logout-item">
+                <a href="../HTML/masuk.html" class="preference-item logout-item">
                     <span class="material-icons-outlined pref-icon icon-logout">logout</span>
                     <span class="pref-label">Keluar</span>
                     <span class="material-icons-outlined pref-arrow">chevron_right</span>
@@ -67,7 +67,7 @@
         </main>
 
         <footer class="profile-footer-action">
-            <button class="upload-product-button">Unggah Produk</button>
+            <button class="upload-product-button">Edit Profil</button>
         </footer>
     </div>
 </body>
