--- a/HTML/riwayat.html
+++ b/HTML/riwayat.html
@@ -40,8 +40,8 @@
         <span class="store-name">Kedai Pak Haji</span>
       </div>
       <div class="riwayat-content">
-        <img src="https://via.placeholder.com/60x60.png?text=Roti" alt="Roti Tawar" class="product-img-riwayat"> <div class="riwayat-info">
-          <h4 class="product-name-text">Roti Tawar</h4>
+        <img src="../Images/food1.jpg" alt="Sambal" class="product-img-riwayat"> <div class="riwayat-info">
+          <h4 class="product-name-text">Sambal teri</h4>
           <p class="price-text">Rp10.000</p>
           <p class="date-text">Diterima pada 18 Maret 2024</p>
         </div>
@@ -54,8 +54,8 @@
         <span class="store-name">Warung Bu Lilik</span>
       </div>
       <div class="riwayat-content">
-        <img src="https://via.placeholder.com/60x60.png?text=Sambal" alt="Sambal Teri" class="product-img-riwayat"> <div class="riwayat-info">
-          <h4 class="product-name-text">Sambal Teri</h4>
+        <img src="../Images/food2.jpg" alt="Sambal Teri" class="product-img-riwayat"> <div class="riwayat-info">
+          <h4 class="product-name-text">Sambal Udang</h4>
           <p class="price-text">Rp0</p> <p class="date-text">Diterima pada 16 Maret 2024</p>
         </div>
       </div>
