--- a/HTML/chat.html
+++ b/HTML/chat.html
@@ -14,7 +14,7 @@
 
           <div class="desktop-header">
             <div class="left">
-                <a href="./beranda.html"><button class="backBtn"><img src="../Images/icon/arrow up.svg"></button></a>
+                <button class="backBtn" onclick="history.back()"><img src="../Images/icon/arrow up.svg"></button>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
@@ -25,7 +25,7 @@
         </div>
   <div class="chat-header">
     <div class="left">
-      <a href="./beranda.html"><button class="backBtn"><img src="../Images/icon/arrow up.svg"></button></a>
+      <button class="backBtn" onclick="history.back()"><img src="../Images/icon/arrow up.svg"></button>
     </div>
     <div class="chat-user-info">
       <p class="chat-name">Kedai Pak Haji</p>
