--- a/HTML/daftarMakanan.html
+++ b/HTML/daftarMakanan.html
@@ -17,7 +17,7 @@
             <a href="./beranda.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
             <div class="input-group">
                     <div class="input-group-prepend">
-                            <span class="input-group-text" id="search">&#xF52A;</span>
+                            <span class="input-group-text" id="search"><img src="/Images/icon/search.svg"></span>
                     </div>
                     <input type="email" class="form-control" id="search">
             </div>
@@ -36,7 +36,7 @@
 
         <div class="desktop-search input-group">
                     <div class="input-group-prepend">
-                            <span class="input-group-text" id="email">&#xF52A;</span>
+                            <span class="input-group-text" id="email"><img src="/Images/icon/search.svg"></span>
                     </div>
                     <input type="email" class="form-control" id="email">
         </div>
