--- a/HTML/beranda.html
+++ b/HTML/beranda.html
@@ -87,7 +87,7 @@
                     <div class="item-left">
                         <h1 class="bTextOne f600" style="margin-bottom: 0.5em;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextTwo f500" style="margin-bottom: 1em;" >Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600" style="padding: 0.5em 1.3em; color: #8EADFF;">Donasikan Sekarang</button></a>
+                        <a href="./tambahkanProduk.html"><button class="bTextTwo f600" style="padding: 0.5em 1.3em; color: #8EADFF;">Donasikan Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/Group 16222.png">
@@ -100,7 +100,7 @@
                     <div class="item-middle">
                         <h1 class="h1 f600" style="margin-bottom: 0.5em; text-align: center;">Yang Tersisa, Tetap Berarti</h1>
                         <p class="bTextOne f500" style="margin-bottom: 1em; text-align: center;">Beli makanan sisa yang masih layak,<br>bantu kurangi limbah makanan.</b></p>
-                        <a href=""><button class="bTextTwo f600" style="color: #8EADFF;">Donasi Sekarang</button></a>
+                        <a href="./tambahkanProduk.html"><button class="bTextTwo f600" style="color: #8EADFF;">Donasi Sekarang</button></a>
                     </div>
                     <div class="item-right">
                         <img src="/Images/desktop-beranda.svg">
