--- a/HTML/tambahkanProduk.html
+++ b/HTML/tambahkanProduk.html
@@ -13,12 +13,12 @@
     </head>
     <body>
         <div class="header">
-            <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
+            <a href="./beranda.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
             <p class="bTextOne f600">Tambahkan Produk</p>
         </div>
         <div class="desktop-header">
             <div class="left">
-                <a href="./detailMakanan.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
+                <a href="./beranda.html"><button class="backBtn"><img src="/Images/icon/arrow up.svg"></button></a>
                 <p class="bTextOne f600">Kembali</p>
             </div>
             <div class="right">
